--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="C:\Users\medig\Downloads\Shiva_CloudDevOpsCV.docx" class="button fit" download="Shiva_CloudDevOpsCV.docx">Download Resume</a></li>
+							<li><a href="https://github.com/shivamediga/ShivaDevOps.in/blob/main/Shiva_CloudDevOpsCV.docx" class="button fit" download="Shiva_CloudDevOpsCV.docx">Download Resume</a></li>
 						</ul>
 					</nav>
 
